--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "goit-js-hw-10",
+  "name": "goit-js-hw-09",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/goit-js-hw-09/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -14,7 +14,7 @@
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Anastasiia <shamalo.n.75@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "flatpickr": "^4.6.13",
